# MBA

./: .gitignore  CMakeLists.txt
app/: mainSimplest.C
cmake/Modules/: FindOpenMesh.cmake
include/: MBA.h
src/: MBA.cpp
src/app/: CMakeLists.txt  bezier.h  bezier_app.cpp  bspline_app.cpp  bspline_approximation.h  bspline_surface.h  bspline_surface_app.cpp  mba_eigen.cpp  mba_surface.h  mba_surface_app.cpp  mesh_cut.cpp  mesh_mba.cpp  mesh_normalize.cpp  mesh_utils.h  mesh_uv.cpp  mesh_uvz2xyz.cpp  simplest_mba.cpp  uv3d.cpp
src/mba/: CMakeLists.txt
src/mba/include/mba/: MBA.h  MBAdata.h  MBAtypedef.h  UCBsplineSurface.h  UCBsplines.h
src/mba/src/: MBA.cpp  MBAdata.cpp  UCBsplineSurface.cpp
